--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
-    "name": "Gipetto/CowSay",
+    "name": "gipetto/cowsay",
     "description": "An extensible PHP port of the Cowsay linux utility",
     "homepage": "http://github.com/Gipetto/CowSay",
     "license": "MIT",
     "keywords": [
-        "cows"
+        "cow",
+        "cows",
+        "cowsay"
     ],
     "authors": [
         {
