--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ jobs:
     - php: 5.5
       dist: trusty
 script: "make test"
-#before_install: "composer install --dev"
+before_install: "composer install"
