Allow nightly to fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ php:
     - 7.3
     - 7.4
     - nightly
+allow_failures:
+    - php: nightly
 script: "make test"
 before_install: "composer install"
