Try again for allowing failures

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ php:
     - 7.3
     - 7.4
     - nightly
-allow_failures:
-    - php: nightly
+jobs:
+    allow_failures:
+        - php: nightly
 script: "make test"
 before_install: "composer install"
