--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,19 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.operating-system }}
+    strategy:
+      matrix:
+        operating-system: ["ubuntu-latest"]
+        php-versions: ["7.4", "8.0"]
+        php-unit-versions: ["latest"]
     steps:
       - uses: actions/checkout@v2
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-versions }}
+          tools: phpunit:${{ matrix.phpunit-versions }}
       - name: Composer Install
         run: composer install
       - name: Run a multi-line script
