--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,12 @@ jobs:
         operating-system: ["ubuntu-latest"]
         php-versions: ["7.4", "8.0"]
         php-unit-versions: ["latest"]
+        unstable: [false]
+        include:
+          - php-versions: "8.1"
+            operating-system: "ubuntu-latest"
+            unstable: true
+    continue-on-error: ${{ matrix.unstable }}
     name: CURRENT PHP ${{ matrix.php-versions }} test on ${{ matrix.operating-system }}
     steps:
       - uses: actions/checkout@v2
@@ -48,3 +54,10 @@ jobs:
         run: composer install
       - name: Run Tests
         run: make test
+  # Final step to wrap up a singular protected branch action
+  test-all-required:
+    runs-on: ubuntu-latest
+    needs: ["test-legacy", "test"]
+    steps:
+      - run: echo "Done!"
+    
