--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           tools: phpunit:${{ matrix.phpunit-versions }}
       - name: Composer Install
-        run: composer install
+        run: composer install --no-dev
       - name: Run Tests
         run: make test
   test:
@@ -51,7 +51,7 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           tools: phpunit:${{ matrix.phpunit-versions }}
       - name: Composer Install
-        run: composer install
+        run: composer install --no-dev
       - name: Run Tests
         run: make test
   # Final step to wrap up a singular protected branch action
