Fix typo to get correct phpunit versions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         operating-system: ["ubuntu-18.04"]
         php-versions: ["7.2","7.3"]
-        php-unit-versions: ["8.5.17"]
+        phpunit-versions: ["8.5.17"]
     name: LEGACY PHP ${{ matrix.php-versions }} test on ${{ matrix.operating-system }}
     steps:
       - uses: actions/checkout@v2
@@ -35,7 +35,7 @@ jobs:
       matrix:
         operating-system: ["ubuntu-latest"]
         php-versions: ["7.4", "8.0"]
-        php-unit-versions: ["latest"]
+        phpunit-versions: ["latest"]
         unstable: [false]
         include:
           - php-versions: "8.1"
