--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
           percentage: "98"
           filename: "clover.xml"
       - name: Upload Coverage on Failure
-        if: failure() && ${{ matrix.php-versions == env.COVERAGE_VERSION }}
+        if: failure()
         uses: actions/upload-artifact@v2
         with:
           name: clover-coverage
