--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,10 @@ jobs:
       matrix:
         operating-system: ["ubuntu-18.04"]
         php-versions: ["7.2","7.3"]
-        php-unit-versions: ["latest"]
+        phpunit-versions: ["8.5.17"]
     name: LEGACY PHP ${{ matrix.php-versions }} test on ${{ matrix.operating-system }}
+    env:
+      LEGACY: true
     steps:
       - uses: actions/checkout@v2
       - name: Setup PHP
@@ -26,16 +28,26 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           tools: phpunit:${{ matrix.phpunit-versions }}
       - name: Composer Install
-        run: composer install
+        run: composer install --no-dev
       - name: Run Tests
         run: make test
+      - name: Run demo file
+        run: php demo.php
   test:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
         operating-system: ["ubuntu-latest"]
         php-versions: ["7.4", "8.0"]
-        php-unit-versions: ["latest"]
+        phpunit-versions: ["latest"]
+        unstable: [false]
+        include:
+          - php-versions: "8.1"
+            operating-system: "ubuntu-latest"
+            unstable: true
+    env:
+      COVERAGE_VERSION: "8.0"
+    continue-on-error: ${{ matrix.unstable }}
     name: CURRENT PHP ${{ matrix.php-versions }} test on ${{ matrix.operating-system }}
     steps:
       - uses: actions/checkout@v2
@@ -45,6 +57,28 @@ jobs:
           php-version: ${{ matrix.php-versions }}
           tools: phpunit:${{ matrix.phpunit-versions }}
       - name: Composer Install
-        run: composer install
+        run: composer install --no-dev
       - name: Run Tests
         run: make test
+      - name: Check test coverage
+        id: test-coverage
+        if: ${{ matrix.php-versions == env.COVERAGE_VERSION }}
+        uses: johanvanhelden/gha-clover-test-coverage-check@v1
+        with:
+          percentage: "98"
+          filename: "clover.xml"
+      - name: Upload Coverage on Failure
+        if: failure()
+        uses: actions/upload-artifact@v2
+        with:
+          name: clover-coverage
+          path: coverage
+      - name: Run demo file
+        run: php demo.php
+  # Final step to wrap up a singular protected branch action
+  test-all-required:
+    runs-on: ubuntu-latest
+    needs: ["test-legacy", "test"]
+    steps:
+      - run: echo "Done!"
+    
