--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,15 +38,15 @@ jobs:
     strategy:
       matrix:
         operating-system: ["ubuntu-latest"]
-        php-versions: ["7.4", "8.0"]
+        php-versions: ["7.4", "8.0", "8.1"]
         phpunit-versions: ["latest"]
         unstable: [false]
         include:
-          - php-versions: "8.1"
+          - php-versions: "8.2"
             operating-system: "ubuntu-latest"
             unstable: true
     env:
-      COVERAGE_VERSION: "8.0"
+      COVERAGE_VERSION: "8.1"
     continue-on-error: ${{ matrix.unstable }}
     name: CURRENT PHP ${{ matrix.php-versions }} test on ${{ matrix.operating-system }}
     steps:
