--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0"
+        "php": ">=7.4.0",
+        "symfony/string": "^5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~10.2.0"
