--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,11 @@
         }
     ],
     "require": {
-        "php": ">=7.2.0"
+        "php": ">=7.4.0",
+        "symfony/string": "^5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~9.5.0"
+        "phpunit/phpunit": "~10.2.0"
     },
     "autoload": {
         "psr-4": {
