--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,10 +41,10 @@ jobs:
         php-versions: ["8.1", "8.2"]
         phpunit-versions: ["latest"]
         unstable: [false]
-        # include:
-        #   - php-versions: "8.2"
-        #     operating-system: "ubuntu-latest"
-        #     unstable: true
+        include:
+          - php-versions: "8.3"
+            operating-system: "ubuntu-latest"
+            unstable: true
     env:
       COVERAGE_VERSION: "8.2"
     continue-on-error: ${{ matrix.unstable }}
