Add php 8.3 to CI cycle (#9)
* Add php 8.3 to CI cycle

* Bump to checkout v3

* Checkout v4, apparently...

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     env:
       LEGACY: true
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -41,16 +41,16 @@ jobs:
         php-versions: ["8.1", "8.2"]
         phpunit-versions: ["latest"]
         unstable: [false]
-        # include:
-        #   - php-versions: "8.2"
-        #     operating-system: "ubuntu-latest"
-        #     unstable: true
+        include:
+          - php-versions: "8.3"
+            operating-system: "ubuntu-latest"
+            unstable: true
     env:
       COVERAGE_VERSION: "8.2"
     continue-on-error: ${{ matrix.unstable }}
     name: CURRENT PHP ${{ matrix.php-versions }} test on ${{ matrix.operating-system }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
