--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=8.0.2",
-        "symfony/string": "^6.0"
+        "symfony/string": "6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~10.2.0"
