--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         }
     ],
     "require": {
-        "php": ">=7.4.0",
-        "symfony/string": "^5.4"
+        "php": ">=8.0.2",
+        "symfony/string": "6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~10.2.0"
