Don't care about artifact upload on failure

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,12 +67,12 @@ jobs:
         with:
           percentage: "98"
           filename: "clover.xml"
-      - name: Upload Coverage on Failure
-        if: failure()
-        uses: actions/upload-artifact@v2
-        with:
-          name: clover-coverage
-          path: coverage
+      # - name: Upload Coverage on Failure
+      #   if: failure()
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: clover-coverage
+      #     path: coverage
       - name: Run demo file
         run: php demo.php
   # Final step to wrap up a singular protected branch action
