--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 on:
   push:
@@ -8,7 +6,7 @@ on:
     # @todo: this publishes to GH Pages on PR runs, fix
     #        to only run on merges to master
     branches: [ master ]
-  # Allows you to run this workflow manually from the Actions tab
+  # Allows us to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
@@ -80,11 +78,12 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: ["test-all-required"]
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Publish to GH Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: ../demo
+          folder: demo
 
     
