--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 on:
   push:
     branches: [ master ]
   pull_request:
+    # @todo: this publishes to GH Pages on PR runs, fix
+    #        to only run on merges to master
     branches: [ master ]
-  # Allows you to run this workflow manually from the Actions tab
+  # Allows us to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
@@ -38,15 +38,15 @@ jobs:
     strategy:
       matrix:
         operating-system: ["ubuntu-latest"]
-        php-versions: ["8.1", "8.2"]
+        php-versions: ["8.1", "8.2", "8.3"]
         phpunit-versions: ["latest"]
         unstable: [false]
         include:
-          - php-versions: "8.3"
+          - php-versions: "8.4"
             operating-system: "ubuntu-latest"
             unstable: true
     env:
-      COVERAGE_VERSION: "8.2"
+      COVERAGE_VERSION: "8.3"
     continue-on-error: ${{ matrix.unstable }}
     name: CURRENT PHP ${{ matrix.php-versions }} test on ${{ matrix.operating-system }}
     steps:
@@ -67,12 +67,6 @@ jobs:
         with:
           percentage: "98"
           filename: "clover.xml"
-      - name: Upload Coverage on Failure
-        if: failure()
-        uses: actions/upload-artifact@v2
-        with:
-          name: clover-coverage
-          path: coverage
       - name: Run demo file
         run: php demo.php
   # Final step to wrap up a singular protected branch action
@@ -81,4 +75,15 @@ jobs:
     needs: ["test-legacy", "test"]
     steps:
       - run: echo "Done!"
+  publish:
+    runs-on: ubuntu-latest
+    needs: ["test-all-required"]
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Publish to GH Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages
+          folder: demo
+
     
