--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: ["ubuntu-20.04"]
-        php-versions: ["8.0"]
-        phpunit-versions: ["9.6.20"]
+        operating-system: ["ubuntu-latest"]
+        php-versions: ["8.1"]
+        phpunit-versions: ["latest"]
     name: LEGACY PHP ${{ matrix.php-versions }} test on ${{ matrix.operating-system }}
     env:
       LEGACY: true
@@ -38,7 +38,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ["ubuntu-latest"]
-        php-versions: ["8.1", "8.2", "8.3"]
+        php-versions: ["8.2", "8.3"]
         phpunit-versions: ["latest"]
         unstable: [false]
         include:
